updating weather to be more accurate.